# base

./: .gitignore  Makefile  README.md  base  meson.build  run
.cache/clangd/index/: logger.hpp.E049F09AE0701C23.idx  main.cpp.ABD02FFB574D8982.idx
.github/workflows/: release.yml
homeworks/alocator/source/: logging_allocator.cpp
homeworks/ip_filter/: ip_filter.tsv  ip_filter_test.tsv
src/: config.hpp  error_exception.hpp  main.cpp  meson.build
src/allocator/: allocator.hpp  meson.build  simple_allocator.hpp
src/hello/: hello.cpp  hello.hpp  meson.build
src/ip_filter/: ip_filter.hpp  meson.build
src/log/: logger.hpp  meson.build
src/matrix/: matrix_old.hpp  meson.build
src/simple_allocator/: meson.build  simple_allocator.hpp  simple_list.hpp
tests/: hello.cpp  ip_filter.cpp  meson.build  simple_allocator.cpp
